--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Pods
 /GitHubUserFetcher.xcworkspace/xcuserdata/80148.xcuserdatad/UserInterfaceState.xcuserstate
+/GitHubUserFetcher.xcworkspace/xcuserdata
